--- a/archives/2023-4-21.md
+++ b/archives/2023-4-21.md
@@ -5,52 +5,52 @@
 1. [发改委表示正在抓紧研究起草关于恢复和扩大消费的政策文件，将下大力气稳定汽车消费，哪些信息值得关注？](https://www.zhihu.com/question/596473578)
 1. [研究表明走路快和走路慢的人或相差 15 年寿命，医学角度如何看待该研究？走路快慢与健康是否真有关系？](https://www.zhihu.com/question/596659161)
 1. [如何看待近日淄博日报发的《致全市人民的一封信》?](https://www.zhihu.com/question/596692671)
+1. [「代缴违法」后，2 亿灵活就业者怎么缴纳社保才合理？「挂靠代缴」为何屡禁不止？](https://www.zhihu.com/question/595770803)
+1. [夫妻喝洁厕灵中毒，丈夫报警求先救妻子，如何看待他们因吵架产生的过激行为和丈夫的做法？](https://www.zhihu.com/question/596722758)
+1. [越来越多汽车厂商推出混动车型，市场选择越来越多，大家是否还看重造车基因？](https://www.zhihu.com/question/596887343)
+1. [如何评价林俊杰新专辑《重拾_快乐 》？这张专辑在他的生涯作品里是什么水平？](https://www.zhihu.com/question/596845188)
+1. [如何提高人工智能开发利用的能力？应届毕业生怎么应对 AI 浪潮的挑战？](https://www.zhihu.com/question/596761563)
+1. [相亲究竟是否需要确认恋爱关系？](https://www.zhihu.com/question/593993810)
+1. [直接把平板装在车机上，会不会比车厂做的更好用？](https://www.zhihu.com/question/595757567)
 1. [电影《灌篮高手》票房是否能够突破 20 亿？](https://www.zhihu.com/question/596637711)
 1. [22-23 赛季欧联 1/4 决赛，曼联 0:3 塞维利亚，总分 2:5 遭淘汰，如何评价这场比赛？](https://www.zhihu.com/question/596861526)
-1. [如何提高人工智能开发利用的能力？应届毕业生怎么应对AI浪潮的挑战？](https://www.zhihu.com/question/596761563)
-1. [英国通胀居高难下，3 月食品价格同比上涨 19.1%，再次刷新 45 年来最高纪录，将产生哪些影响？](https://www.zhihu.com/question/596669983)
-1. [小朋友看到动物园的鹦鹉表演加减法计算，这是如何做到的，动物真的可以掌握数字和计算能力吗？](https://www.zhihu.com/question/594902100)
-1. [《水浒传》里面梁山水泊的钱粮物资来源于哪里？](https://www.zhihu.com/question/596636500)
-1. [如果把高铁的座位都换成动感单车，让乘客骑车提供动力，高铁能开多快？](https://www.zhihu.com/question/596318014)
 1. [菲律宾外长称外交战略是「与各国保持友好关系」，美国不能在菲存放「防卫台湾」的武器，释放了哪些信号？](https://www.zhihu.com/question/596718488)
-1. [大脑能耗很高，为什么没有多动脑子的减肥方法？](https://www.zhihu.com/question/596469703)
-1. [《英雄联盟》官方解说娃娃回应解说抱团「我要为我公司旗下艺人的发展和收入负责」对此你有什么想说？](https://www.zhihu.com/question/596490158)
-1. [宁德时代将于上海车展发布凝聚态电池技术，如何评价该技术？](https://www.zhihu.com/question/594956724)
-1. [为什么NBA状元不装弱以能加入强队？](https://www.zhihu.com/question/595677887)
-1. [哪些品牌的空气净化器性价比高，又方便使用？](https://www.zhihu.com/question/591285203)
+1. [如果把高铁的座位都换成动感单车，让乘客骑车提供动力，高铁能开多快？](https://www.zhihu.com/question/596318014)
+1. [英国通胀居高难下，3 月食品价格同比上涨 19.1%，再次刷新 45 年来最高纪录，将产生哪些影响？](https://www.zhihu.com/question/596669983)
 1. [2023 年一季度北京居民人均可支配收入 21367 元，这数据透露了哪些信息？如何解读？](https://www.zhihu.com/question/596739775)
+1. [哪些品牌的空气净化器性价比高，又方便使用？](https://www.zhihu.com/question/591285203)
 1. [宝马 MINI 再次发文道歉，称视频中老外是同事，希望给礼仪小姐姐多点宽容和空间，哪些信息值得关注？](https://www.zhihu.com/question/596884425)
 1. [宝马回应其「mini 展区被指区别对待中外访客」，称「是误会，管理不善」，如何看待这一回应？](https://www.zhihu.com/question/596704817)
-1. [矩阵的本质是什么？](https://www.zhihu.com/question/22047061)
-1. [银保监会表示，从未批准设立「中国时间银行」，如何辨别假银行？需要注意哪些风险？](https://www.zhihu.com/question/596740415)
+1. [大脑能耗很高，为什么没有多动脑子的减肥方法？](https://www.zhihu.com/question/596469703)
+1. [小朋友看到动物园的鹦鹉表演加减法计算，这是如何做到的，动物真的可以掌握数字和计算能力吗？](https://www.zhihu.com/question/594902100)
+1. [《水浒传》里面梁山水泊的钱粮物资来源于哪里？](https://www.zhihu.com/question/596636500)
+1. [《英雄联盟》官方解说娃娃回应解说抱团「我要为我公司旗下艺人的发展和收入负责」对此你有什么想说？](https://www.zhihu.com/question/596490158)
 1. [目前我国生化环材行业技术水平如何，有哪些新材料新技术被真正应用到日常生活中了？](https://www.zhihu.com/question/596686356)
-1. [4 月 LPR 报价出炉，1 年期和 5 年期均维持不变，LPR连续 8 个月按兵不动，这意味着什么？](https://www.zhihu.com/question/596673763)
-1. [《地下交通站》里有哪些让你拍案叫绝的细节？](https://www.zhihu.com/question/395178508)
-1. [欧冠半决赛对阵出炉：皇马大战曼城，米兰双雄德比，看好谁能进决赛？](https://www.zhihu.com/question/596662893)
-1. [作为跑步爱好者，周末围绕跑步你都会做哪些事？](https://www.zhihu.com/question/595922123)
-1. [如何评价《博人传》漫画80话?](https://www.zhihu.com/question/596405697)
-1. [喜欢喝浓郁咖啡，有哪些意式半自动咖啡机推荐？](https://www.zhihu.com/question/591071388)
-1. [妮蔻重做后效果发布「被动可变小兵、野怪、眼，大招群体击飞」如何评价本次改动？](https://www.zhihu.com/question/596492628)
-1. [什么样的电视能够给我们带来沉浸的观影体验？](https://www.zhihu.com/question/596499580)
-1. [成为一个肌肉线条很漂亮的女孩子，是一种什么样的体验？](https://www.zhihu.com/question/594690037)
-1. [《灌篮高手》里，安西教练是更偏爱樱木花道还是流川枫？](https://www.zhihu.com/question/444685521)
-1. [如何评价国漫《画江湖之不良人》第六季第九集？](https://www.zhihu.com/question/596676549)
-1. [如何评价 vivo 在 4月20日发布的X Fold2 和 X Flip折叠屏，有哪些值得关注的亮点？](https://www.zhihu.com/question/596686224)
-1. [长峰医院灾情警示，医院消防难题如何解决？如何避免火灾发生？医院该如何进行适老化消防安全改造？](https://www.zhihu.com/question/596663103)
-1. [有什么性价比高的除螨仪推荐？](https://www.zhihu.com/question/591072348)
-1. [新晋宝妈，母婴用品囤货清单上不能少了哪些性价比好物？有哪些购买经验可以分享吗？](https://www.zhihu.com/question/596330518)
+1. [梅西打进 805 球足坛历史射手榜仅次于 C 罗，梅西能否追赶上 C 罗的记录？](https://www.zhihu.com/question/596054422)
+1. [为什么很多爱骑自行车的人并不看环法这种比赛，相反很多看比赛的人也不经常骑车，这属于什么现象？](https://www.zhihu.com/question/595214193)
 1. [如何解读英国 3 月 CPI 同比上升 10.1%，高于预期，会如何影响英国央行的加息倾向？](https://www.zhihu.com/question/596519067)
-1. [4999 元起的荣耀笔记本 MagicBook 14 系列怎么样？首发可以冲吗？](https://www.zhihu.com/question/596580842)
+1. [为什么听古典音乐会不可以随意鼓掌？](https://www.zhihu.com/question/585702200)
+1. [有什么性价比高的除螨仪推荐？](https://www.zhihu.com/question/591072348)
+1. [预感今年五一，淄博会是个很火的旅游目的地，淄博除了烧烤还有哪些地方值得游玩？](https://www.zhihu.com/question/595016455)
+1. [有什么东西可以修护皮肤屏障，敏感肌怎么修复?](https://www.zhihu.com/question/523363327)
+1. [如何评价《声生不息·宝岛季》第六期？](https://www.zhihu.com/question/596782916)
+1. [身为家长，你周末会带孩子做些什么有意义的活动？](https://www.zhihu.com/question/592775237)
+1. [喜欢喝浓郁咖啡，有哪些意式半自动咖啡机推荐？](https://www.zhihu.com/question/591071388)
+1. [长峰医院灾情警示，医院消防难题如何解决？如何避免火灾发生？医院该如何进行适老化消防安全改造？](https://www.zhihu.com/question/596663103)
+1. [有哪些值得购买的空气净化器呢？](https://www.zhihu.com/question/591485168)
+1. [「发疯」可以被看作是一种管理情绪的方式吗？如何科学地管理个人情绪？](https://www.zhihu.com/question/596140263)
+1. [五一旅游选择爬山好还是海边好，有哪些目的地推荐？](https://www.zhihu.com/question/593501959)
+1. [矩阵的本质是什么？](https://www.zhihu.com/question/22047061)
 1. [硅谷银行暴雷后美联储公布首份褐皮书，指出美国经济增长停滞、信贷渠道缩窄，哪些信息值得关注？](https://www.zhihu.com/question/596692586)
 1. [大熊猫的配色究竟有什么奥妙？](https://www.zhihu.com/question/596312122)
-1. [迫于东欧五国压力，欧盟准备紧急限制乌克兰粮食外运，这对乌克兰经济将造成哪些影响？哪些信息值得关注？](https://www.zhihu.com/question/596682032)
-1. [动画电影《灌篮高手》结尾，宫城良田出现在美国的篮球赛场上，和泽北荣治狭路相逢，你怎么看这一情节？](https://www.zhihu.com/question/596583490)
-1. [计划在五一来场「逃离城市的解压之旅」，有哪些地方值得一去？](https://www.zhihu.com/question/595016373)
+1. [银保监会表示，从未批准设立「中国时间银行」，如何辨别假银行？需要注意哪些风险？](https://www.zhihu.com/question/596740415)
+1. [小明爆料 2023 LPL 夏季赛 RNG 中单选手 ID 为 M 开头，都有哪些选手符合条件？](https://www.zhihu.com/question/596536887)
+1. [自行车通勤的话，除了准备一辆车，还要必备哪些骑行装备？](https://www.zhihu.com/question/596178100)
 1. [特斯拉一季度营收 233 亿美元，净利跌超两成，毛利率跌破 20%，自由现金流降至两年最低，如何解读？](https://www.zhihu.com/question/596667429)
-1. [骑公路车达到均速 40km/h 有多难？](https://www.zhihu.com/question/588085995)
-1. [这几年的生态环境，是不是肉眼可见地变好了？](https://www.zhihu.com/question/596312091)
-1. [眼花缭乱的汽车科技，到底哪些是真正实用的？](https://www.zhihu.com/question/596687325)
-1. [为什么竖折几乎用的都是中端配置，竖折真的是「美丽小废物」吗？](https://www.zhihu.com/question/596686568)
-1. [你穿过的哪件衣服「显白」的让人眼前一亮？](https://www.zhihu.com/question/592448892)
+1. [如何评价 vivo 在 4月20日发布的X Fold2 和 X Flip折叠屏，有哪些值得关注的亮点？](https://www.zhihu.com/question/596686224)
+1. [妮蔻重做后效果发布「被动可变小兵、野怪、眼，大招群体击飞」如何评价本次改动？](https://www.zhihu.com/question/596492628)
+1. [动画电影《灌篮高手》结尾，宫城良田出现在美国的篮球赛场上，和泽北荣治狭路相逢，你怎么看这一情节？](https://www.zhihu.com/question/596583490)
+1. [如何评价折叠屏当前的技术积累，厂商在科技探索和实用体验的平衡上都做了哪些努力？](https://www.zhihu.com/question/596686682)
+1. [如何评价国漫《画江湖之不良人》第六季第九集？](https://www.zhihu.com/question/596676549)
 
 <!-- END -->
