--- a/archives/2023-5-5.md
+++ b/archives/2023-5-5.md
@@ -3,54 +3,54 @@
  <!-- BEGIN -->
 
 1. [报告称 68.5% 青年可付房款首付，74.7% 倾向于购买新房，如何看待这一数据？](https://www.zhihu.com/question/599014827)
-1. [美国国家安全顾问沙利文称「美国不想与中国脱钩」，出口管制只针对可能影响中美军事平衡的技术，如何解读？](https://www.zhihu.com/question/598986943)
-1. [继承法规定父母同为第一顺序继承人，合理吗？](https://www.zhihu.com/question/41653503)
-1. [如何看待史航性骚扰事件中的当事人之一“小默”所发布的《关于史航的“小作文”》？](https://www.zhihu.com/question/598981963)
-1. [4 月百城新房价格持续上涨，二手房价格同环比跌幅扩大，房地产市场现状如何？哪些信息值得关注？](https://www.zhihu.com/question/599038748)
-1. [如何评价《地。-关于地球的运动-》这本漫画？](https://www.zhihu.com/question/512587521)
-1. [用人单位愿不愿意招海归，为什么？](https://www.zhihu.com/question/46952784)
+1. [用人单位愿意招海归吗？为什么？海归的优劣势在哪？](https://www.zhihu.com/question/46952784)
+1. [美国半导体行业协会总裁称美半导体公司不能缺席中国市场，外交部回应，哪些信息值得关注？](https://www.zhihu.com/question/599009761)
 1. [《原神》3.6版本的剧情中，草神纳西妲的人设崩了吗?](https://www.zhihu.com/question/595116856)
-1. [女幼师凭儿歌「挖呀挖呀挖」走红，如何看待这一现象？为何这首儿歌能走红？](https://www.zhihu.com/question/598949002)
-1. [格力电器五一节后首日股价触及跌停，昔日「白马股」怎么了？公司前景如何？](https://www.zhihu.com/question/599018854)
-1. [网传江苏江阴发生枪击事件，警方回应称「正在处理，无人员死亡」，具体情况如何？](https://www.zhihu.com/question/598997116)
+1. [俞敏洪称长期把员工 996 看作骄傲的是垃圾公司，并建议 24 节气都放假，可行性如何？怎么放更合理？](https://www.zhihu.com/question/599152891)
+1. [继承法规定父母同为第一顺序继承人，合理吗？](https://www.zhihu.com/question/41653503)
+1. [NBA季后赛历史上有什么经典的战术？](https://www.zhihu.com/question/374856005)
+1. [如何评价《一人之下》漫画 622（664）话？](https://www.zhihu.com/question/599120343)
+1. [有什么实用的 AI 绘画软件推荐？](https://www.zhihu.com/question/585195663)
+1. [你有没有复购三次以上的零食？](https://www.zhihu.com/question/589868225)
 1. [两中国游客在巴厘岛一酒店身亡，目前事件调查进展如何？](https://www.zhihu.com/question/598961847)
-1. [十一部门联合发文，明确规定「医疗美容服务属于医疗活动」，这意味着什么？对行业发展有哪些重大意义？](https://www.zhihu.com/question/599022658)
+1. [贝吉塔被大王打的绝望丧失斗志，而悟空赢了弗利萨，为什么贝吉塔觉得自己能超越悟空？](https://www.zhihu.com/question/537056811)
+1. [如何评价《地。-关于地球的运动-》这本漫画？](https://www.zhihu.com/question/512587521)
+1. [网传江苏江阴发生枪击事件，警方回应称「正在处理，无人员死亡」，具体情况如何？](https://www.zhihu.com/question/598997116)
+1. [女幼师凭儿歌「挖呀挖呀挖」走红，如何看待这一现象？为何这首儿歌能走红？](https://www.zhihu.com/question/598949002)
+1. [英国国王查尔斯三世的加冕仪式将于 2023 年 5 月 6 日举行，有哪些信息值得关注？](https://www.zhihu.com/question/558791788)
+1. [美国国家安全顾问沙利文称「美国不想与中国脱钩」，出口管制只针对可能影响中美军事平衡的技术，如何解读？](https://www.zhihu.com/question/598986943)
+1. [4 月百城新房价格持续上涨，二手房价格同环比跌幅扩大，房地产市场现状如何？哪些信息值得关注？](https://www.zhihu.com/question/599038748)
 1. [如何评价漫威电影《银河护卫队 3》？](https://www.zhihu.com/question/594328175)
-1. [为什么小时候不怕的东西，长大了反而怕了呢？](https://www.zhihu.com/question/279492828)
-1. [如何看待《英雄联盟》13.10 版本给薇恩技能添加 AP 加成违背背景设定的行为？](https://www.zhihu.com/question/599003655)
-1. [巴黎球迷组织大规模抗议，集体辱骂梅西、内马尔等球员和管理层，巴黎官方强烈谴责，如何评价这些球迷的行为？](https://www.zhihu.com/question/598953893)
-1. [智能门锁为何不接交流电？](https://www.zhihu.com/question/587490338)
-1. [2023 季中冠军赛 BLG 2:1 有惊无险击败 GG 晋级，如何评价这场比赛？](https://www.zhihu.com/question/599087647)
 1. [《漫长的季节》沈墨彻底的黑化复仇，你对这个角色的戏份有何评价？](https://www.zhihu.com/question/598514679)
+1. [如何看待《英雄联盟》13.10 版本给薇恩技能添加 AP 加成违背背景设定的行为？](https://www.zhihu.com/question/599003655)
+1. [为什么小时候不怕的东西，长大了反而怕了呢？](https://www.zhihu.com/question/279492828)
+1. [十一部门联合发文，明确规定「医疗美容服务属于医疗活动」，这意味着什么？对行业发展有哪些重大意义？](https://www.zhihu.com/question/599022658)
+1. [智能门锁为何不接交流电？](https://www.zhihu.com/question/587490338)
 1. [我每天坚持跑步，锻炼身体，为啥体重难以降下来，是训练强度不够，还是方法不对？](https://www.zhihu.com/question/596711446)
 1. [为什么《黑豹2》中瓦甘达科技那么发达了大部分士兵还在使用冷兵器？](https://www.zhihu.com/question/583342136)
-1. [如何评价陈晓、毛晓彤主演的电视剧《云襄传》?](https://www.zhihu.com/question/413434697)
-1. [黑胡子为什么毫不忌惮青雉？却逃避赤犬？](https://www.zhihu.com/question/481094060)
-1. [2023 KPL 春季赛 DRG.GK 4:3 武汉eStar Pro，如何评价这场比赛？](https://www.zhihu.com/question/598877343)
+1. [格力电器五一节后首日股价触及跌停，昔日「白马股」怎么了？公司前景如何？](https://www.zhihu.com/question/599018854)
+1. [2023 季中冠军赛 BLG 2:1 有惊无险击败 GG 晋级，如何评价这场比赛？](https://www.zhihu.com/question/599087647)
+1. [巴黎球迷组织大规模抗议，集体辱骂梅西、内马尔等球员和管理层，巴黎官方强烈谴责，如何评价这些球迷的行为？](https://www.zhihu.com/question/598953893)
+1. [如何处理不舒服的同事关系？](https://www.zhihu.com/question/48131824)
+1. [电视剧《知否知否应是绿肥红瘦》中，为什么墨兰做了很多错事却能被原谅？](https://www.zhihu.com/question/596370485)
+1. [如何评价《崩坏：星穹轨道》的游戏剧情？?](https://www.zhihu.com/question/597982043)
+1. [如何看待 Modular 提出的 mojo 语言？](https://www.zhihu.com/question/598832787)
+1. [运动对大脑有何影响？](https://www.zhihu.com/question/285312935)
+1. [为了钓鱼，中年男人有多疯狂？为什么男人如此热爱钓鱼？](https://www.zhihu.com/question/595784372)
 1. [你中第一篇顶会的时候是什么感觉？](https://www.zhihu.com/question/543897168)
-1. [当你的交易水平进入瓶颈时，你会怎样突破？](https://www.zhihu.com/question/598842679)
-1. [媒体报道「阿根廷将在 6 月来中国踢 2 场热身赛，地点是北京和深圳」，哪些信息值得关注？](https://www.zhihu.com/question/598968598)
-1. [戏剧教育的意义是什么?](https://www.zhihu.com/question/596902129)
-1. [为什么城市里的人越来越流行在街上跑步？](https://www.zhihu.com/question/598366304)
-1. [不是教育方向工作者，我还能在什么地方给到孩子力量？](https://www.zhihu.com/question/596714189)
-1. [孔子到底伟大在哪?](https://www.zhihu.com/question/450582758)
-1. [当下上学真的有必要吗？](https://www.zhihu.com/question/598855352)
-1. [有什么好吃而且吃起来无负担的零食推荐？](https://www.zhihu.com/question/589699628)
-1. [22-23 赛季英超曼城 3:0 西汉姆联，联赛九连胜登顶，哈兰德 35 球破纪录，如何评价这场比赛？](https://www.zhihu.com/question/598929070)
-1. [上班族如何协调好时间来进行休闲运动？](https://www.zhihu.com/question/595327871)
-1. [现货黄金一度突破 2085 美元创历史新高，消费者购金热情高，金价后续走势如何？现在「入场」是否合适？](https://www.zhihu.com/question/598965602)
-1. [把下班后的时间都用来刷手机，对人生对生活究竟有没有影响？](https://www.zhihu.com/question/598823194)
-1. [拥有哪些数码产品可以提升你的工作效率？](https://www.zhihu.com/question/596680794)
-1. [工作不方便用电脑，入手折叠屏会是最优解吗？最近发布的 vivo X Fold2 合适吗？](https://www.zhihu.com/question/598973257)
-1. [今年五一黄金周有2.3亿人堵在路上，对比国内游，节假日出行境外游是否是更好选择呢，你怎么看？](https://www.zhihu.com/question/598770504)
-1. [五一开纯电动车长途旅行是什么体验？](https://www.zhihu.com/question/597928888)
-1. [如何评价《崩坏：星穹铁道》中的可可利亚？如何解读她死前的最后一笑？](https://www.zhihu.com/question/598564336)
-1. [你看过有哪些人不可貌相的经历？](https://www.zhihu.com/question/40882844)
-1. [假如你是一只熊猫， 你在外头有事，还挺急的，你要怎么逃离动物园呢？](https://www.zhihu.com/question/593665938)
-1. [对于刚参加工作的大学生来说，哪些数码装备是必备之选？](https://www.zhihu.com/question/597444858)
-1. [不太会吃辣，有什么火锅底料推荐呢？](https://www.zhihu.com/question/578280504)
-1. [跳绳减肥效果怎么样？跳绳腿会变粗吗？](https://www.zhihu.com/question/595268037)
-1. [为什么配备 Vibram 鞋底的运动鞋更贵？](https://www.zhihu.com/question/595318728)
-1. [晨跑是空腹好还是吃点东西更好？](https://www.zhihu.com/question/598252458)
+1. [2023 年 618 是否值得买显卡？](https://www.zhihu.com/question/597410081)
+1. [美军参谋长联席会议主席称美国要尽所能，防止中国和俄罗斯建立战略军事同盟，如何解读？](https://www.zhihu.com/question/598846021)
+1. [为什么现在公路车运动这么火？公路车适合所有人吗？](https://www.zhihu.com/question/596091914)
+1. [如何评价陈晓、毛晓彤主演的电视剧《云襄传》?](https://www.zhihu.com/question/413434697)
+1. [西北工业大学邵典老师发布「不正经招生指南」爆火，如何看待邵典老师发布的招生贴，是否推荐报考？](https://www.zhihu.com/question/598539429)
+1. [真的会有人忙到两三天不回你消息吗？](https://www.zhihu.com/question/598854384)
+1. [西太平洋合众银行盘后跌超 50%，正考虑各种战略选择，包括出售该行，该行会是下一个倒下的区域性银行吗？](https://www.zhihu.com/question/598965635)
+1. [这个五一假期你去哪玩了，留下了哪些难忘的回忆？](https://www.zhihu.com/question/599021297)
+1. [如何看待最近热议的「好学生心态受害者」？「好学生心态」往往有怎样的特点？会带来什么影响？](https://www.zhihu.com/question/598870557)
+1. [为何 CV 里没有出现类似 NLP 大模型的涌现现象？](https://www.zhihu.com/question/597657073)
+1. [美方同意中国航司航班增至每周 12 个，数量与美国航司相当，中美关系正处不稳定之时，如何解读美方此举？](https://www.zhihu.com/question/599018121)
+1. [黑胡子为什么毫不忌惮青雉？却逃避赤犬？](https://www.zhihu.com/question/481094060)
+1. [为什么爱健身的人，都不 care 自己有多重？](https://www.zhihu.com/question/592696012)
+1. [《漫长的季节》中殷红为什么要害沈墨？](https://www.zhihu.com/question/598424079)
 
 <!-- END -->
