--- a/archives/2023-7-6.md
+++ b/archives/2023-7-6.md
@@ -4,53 +4,53 @@
 
 1. [房地产业低迷，百万农民工被迫失业或转行，当农民工「退休」，收入下滑焦虑在家庭弥漫，如何保障他们的生活？](https://www.zhihu.com/question/610633138)
 1. [交警查酒驾时后排男子亮出警官证质问「能不能走」，官方回应「正在调查处理」，后续调查有何进展？](https://www.zhihu.com/question/610659420)
-1. [上海交大录取通知书里有「一滴水」，北科大的通知书「由钢制成」，哪些高校的录取通知书给你留下了深刻印象？](https://www.zhihu.com/question/610635358)
 1. [三亚一海鲜店短斤缺两罚款 30 万，涉事商户被清退出场，将起到哪些警示作用？](https://www.zhihu.com/question/610555575)
+1. [上海交大录取通知书里有「一滴水」，北科大的通知书「由钢制成」，哪些高校的录取通知书给你留下了深刻印象？](https://www.zhihu.com/question/610635358)
 1. [2023 年 6 月，31省份新增新冠重症病例 1968 例、死亡 239 例，这一数据说明了什么？](https://www.zhihu.com/question/610625066)
 1. [7 月 6 日美国财政部部长耶伦乘机抵达北京，她此行有哪些具体安排？还有哪些值得关注的地方？](https://www.zhihu.com/question/610702246)
 1. [如果换成吕布在长坂坡，是否能达到赵云的水准?](https://www.zhihu.com/question/609823649)
-1. [76.1% 的农民工 60 岁后不愿休息，为何会出现这样的情况？他们的晚年如何「安放」？](https://www.zhihu.com/question/610495725)
-1. [67岁环卫工穿厚重制服在高温下工作，不穿罚款50元，城管局回应：长袖能够起防晒作用，对此你怎么看？](https://www.zhihu.com/question/610461726)
-1. [为什么优秀员工往往最先离职？](https://www.zhihu.com/question/385026167)
 1. [Uzi 与 Light 同获 6 次 MVP 并列下路选手第一名，如何评价本赛季下路的竞争强度？](https://www.zhihu.com/question/610057378)
-1. [7 月 6 日创业板指跌 0.91%，房地产板块午后走强，如何看待今日行情？](https://www.zhihu.com/question/610625250)
 1. [为什么电车比油车马力大，但后段跑不过油车？](https://www.zhihu.com/question/609554674)
+1. [67岁环卫工穿厚重制服在高温下工作，不穿罚款50元，城管局回应：长袖能够起防晒作用，对此你怎么看？](https://www.zhihu.com/question/610461726)
+1. [7 月 6 日创业板指跌 0.91%，房地产板块午后走强，如何看待今日行情？](https://www.zhihu.com/question/610625250)
+1. [女上司以前高高在上现在退休了态度可好了，该如何应对？](https://www.zhihu.com/question/604372105)
+1. [当我订了一个六人的剧本杀，结果约了七个朋友，咋办？](https://www.zhihu.com/question/607909846)
+1. [2023 LPL 夏季赛于线下举「僵尸」牌子的粉丝公开致歉，这个梗算对 TheShy 选手的侮辱吗？](https://www.zhihu.com/question/610480367)
+1. [数据显示超 9 成职场人希望学习新职业，80 后、90 后成新职业主力军，如何看待年轻人追求职业自由？](https://www.zhihu.com/question/610662099)
+1. [未来的博士到高校当老师会不会很难啊？](https://www.zhihu.com/question/458955483)
+1. [为什么优秀员工往往最先离职？](https://www.zhihu.com/question/385026167)
 1. [爸爸带孩子是什么体验？](https://www.zhihu.com/question/298442489)
-1. [历史上有哪些最牛逼的老丈人？](https://www.zhihu.com/question/606900086)
 1. [谷歌披露量子计算机新突破，经典超算需 47 年的任务可在几秒内完成，具有哪些意义？](https://www.zhihu.com/question/610524870)
-1. [你还记不记得当年高考完那天晚上是怎么过的？](https://www.zhihu.com/question/609600987)
-1. [夏天去露营、海滩是否需要使用高倍防晒霜？](https://www.zhihu.com/question/609226162)
 1. [做「全职儿女」和做家庭主妇有什么不同？为什么「全职儿女」会被认为是「啃老」？](https://www.zhihu.com/question/610276645)
-1. [夏天男生应该怎么护肤？有哪些适合男生的护肤品和护肤方式？](https://www.zhihu.com/question/609081355)
-1. [想换个耳机，有没有推荐的？](https://www.zhihu.com/question/604986631)
-1. [为什么大多数人喜欢用照片留住回忆？](https://www.zhihu.com/question/608139755)
-1. [《英雄联盟》里为什么要移除蓝药呢？](https://www.zhihu.com/question/520016742)
-1. [人可以不上班么？](https://www.zhihu.com/question/610078346)
-1. [男朋友一直花我的钱，还一直说我懒，是不是应该分手？](https://www.zhihu.com/question/609505311)
-1. [作为大连人，你认为哪条街区最能代表大连？](https://www.zhihu.com/question/605319589)
-1. [Meta 正式推出新社媒平台 Threads，放话要取代推特，有哪些特点？未来是否可能取代推特？](https://www.zhihu.com/question/610615844)
-1. [平行志愿中第一个志愿被退档会影响后面的志愿吗？](https://www.zhihu.com/question/610079195)
+1. [国漫《秦时明月》为什么越来越冷门了？](https://www.zhihu.com/question/597525036)
+1. [马斯克称「全面自动驾驶将在今年年末到来，中国会有很强的人工智能能力」，哪些内容值得关注？](https://www.zhihu.com/question/610631642)
+1. [未来手机是否会被 VR 眼镜取代？](https://www.zhihu.com/question/605059370)
+1. [想买个家用的卧室投影仪，有哪些品牌值得推荐？](https://www.zhihu.com/question/571110215)
+1. [快到订婚的日子了，男朋友突然提分手，我该怎么办?](https://www.zhihu.com/question/610191146)
+1. [空调有什么国货品牌可以推荐？](https://www.zhihu.com/question/585887403)
+1. [中国该如何应对资产负债表衰退风险？房贷是居民最大的家庭债务，降低房价是修复债务表的唯一出路吗？](https://www.zhihu.com/question/610067496)
+1. [为什么《英雄联盟》热度就是降不下来？](https://www.zhihu.com/question/582973653)
+1. [包不同的武功需要高到什么程度，才能弥补他给慕容家造成的损失？](https://www.zhihu.com/question/600398118)
 1. [如何评价《原神》新角色「林尼」立绘的美术形象设计？](https://www.zhihu.com/question/610344138)
+1. [美联储 6 月会议纪要「几乎所有官员都表示，可能会进一步收紧货币政策」，释放了什么信号？](https://www.zhihu.com/question/610625334)
+1. [无锁的线程池和内存池还有无锁的队列的设计思路是什么呢?](https://www.zhihu.com/question/374142552)
+1. [产妇刚生完孩子穿什么拖鞋比较好？](https://www.zhihu.com/question/577028795)
+1. [内向的人，和领导怎么拉进距离？](https://www.zhihu.com/question/609886469)
+1. [世界气象组织确认，热带太平洋七年来首次形成厄尔尼诺条件，预计会致全球气温飙升，还有哪些影响？如何应对？](https://www.zhihu.com/question/610614089)
+1. [黄老邪对于郭靖这个女婿是个什么态度？](https://www.zhihu.com/question/31411287)
+1. [孩子多大就可以吃零食了？有什么零食推荐吗？](https://www.zhihu.com/question/578529140)
 1. [减肥怎么才能长久地坚持下去呢？](https://www.zhihu.com/question/607743318)
 1. [手机散热背夹是智商税吗，是否值得购买？](https://www.zhihu.com/question/609906720)
-1. [如果《消失的她》中的李木子没有死，会发生什么？](https://www.zhihu.com/question/609198190)
-1. [国漫《秦时明月》为什么越来越冷门了？](https://www.zhihu.com/question/597525036)
-1. [装修时家电的安装顺序是怎样的，需要提前多久买？](https://www.zhihu.com/question/585163709)
-1. [大学生学理科不学工科，需要买笔记本吗？](https://www.zhihu.com/question/605930961)
-1. [风扇灯实用吗？有没有设计感好点的推荐？](https://www.zhihu.com/question/468006153)
-1. [新疆的火焰山，是否值得去打卡？](https://www.zhihu.com/question/605319466)
-1. [游戏《永劫无间》宣布销量突破 2000 万、并即将转为免费游戏，有哪些值得关注的？](https://www.zhihu.com/question/610483242)
-1. [数据显示超 9 成职场人希望学习新职业，80 后、90 后成新职业主力军，如何看待年轻人追求职业自由？](https://www.zhihu.com/question/610662099)
-1. [中国该如何应对资产负债表衰退风险？房贷是居民最大的家庭债务，降低房价是修复债务表的唯一出路吗？](https://www.zhihu.com/question/610067496)
+1. [不沉迷游戏和热爱游戏可能并存吗？如果可以，是如何做到的？](https://www.zhihu.com/question/602728740)
 1. [上海交大医学博士当中学保健员，媒体称高学历就业下沉或成常态，为何该现象频频出现？对社会发展有哪些影响？](https://www.zhihu.com/question/610692768)
-1. [继美国国务卿布林肯访华探路之后，耶伦此番登场能给两国以及世界带来什么？中美携手合作具有怎样的意义？](https://www.zhihu.com/question/610659233)
+1. [如果《消失的她》中的李木子没有死，会发生什么？](https://www.zhihu.com/question/609198190)
+1. [你认为哪种水果最能代表夏天？你有什么比较不错的吃法？](https://www.zhihu.com/question/601600753)
+1. [现在买笔记本好还是买台式好？](https://www.zhihu.com/question/608206061)
 1. [OpenAI 预测七年内超级 AI 将问世，并宣布「20% 算力用来解决失控问题」，哪些信息值得关注？](https://www.zhihu.com/question/610639130)
 1. [暑期研学火爆，调查称近万元清华北大研学游变与校门拍照，研学背后隐藏着哪些「陷阱」？如何规范研学游发展？](https://www.zhihu.com/question/610627958)
-1. [能分享一下你们相册随手拍的照片吗？](https://www.zhihu.com/question/606335247)
-1. [有哪些你用了很久，体验感一直在线的厨房好物？](https://www.zhihu.com/question/519748828)
-1. [短途骑行除了自行车还需要准备什么？](https://www.zhihu.com/question/373009118)
-1. [永雄停业风波后，记者卧底催收公司，发现各类灰色操作和软性威胁仍然存在，催收行业如何破解合规困境？](https://www.zhihu.com/question/609749222)
-1. [显卡和CPU的硅脂多久换一次？](https://www.zhihu.com/question/607981347)
-1. [关于《火影忍者》系列作品，都有哪些广为流传的谣言？](https://www.zhihu.com/question/593386639)
+1. [推特限流之际，Meta 推出 Threads，两小时涌入 200 万用户，体验如何？小扎能偷家成功吗？](https://www.zhihu.com/question/610631428)
+1. [歼-8 首飞 54 周年，为什么今天我们还在提「歼-8」？](https://www.zhihu.com/question/610461295)
+1. [如何理解「微笑抑郁」，你身边有这样的人吗，当你感到抑郁时你会怎么排解？](https://www.zhihu.com/question/610632846)
+1. [你还记不记得当年高考完那天晚上是怎么过的？](https://www.zhihu.com/question/609600987)
 
 <!-- END -->
